--- a/client/index.html
+++ b/client/index.html
@@ -51,21 +51,43 @@
     </div>
   </div>
 
+  <!--REGISTER PAGE-->
+  <div class="align-items-center min-vh-100 py-3 py-md-0" id="register-page">
+    <div class="container">
+      <div class="card login-card">
+        <div class="row no-gutters">
+          <div class="col-md-5">
+            <img src="assets/images/login.jpg" alt="login" class="login-card-img">
+          </div>
+          <div class="col-md-7">
+            <div class="card-body">
+              <p class="login-card-description">Register</p>
+              <form action="">
+                  <div class="form-group">
+                    <label for="email" class="sr-only">Email</label>
+                    <input type="email" name="email" id="register-input-email" class="form-control" placeholder="Email address">
+                  </div>
+                  <div class="form-group mb-4">
+                    <label for="password" class="sr-only">Password</label>
+                    <input type="password" name="password" id="register-input-password" class="form-control" placeholder="***********">
+                  </div>
+                  <button id="btn-add-user" class="btn btn-block login-btn mb-4">Register</button>
+                </form>
+                <p class="login-card-footer-text"><a href="#!" class="text-reset" id="btn-register-cancel">Cancel</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <!--CURRENCY-->
-    <div class="card" id="currency-list">
+    <div class="card align-items-center" id="currency-list">
       <div class="card-body">
         <p class="card-title" id="currency-name">USD to IDR</p>
         <h1 class="card-text" id="currency-value">14500</h1>
       </div>
     </div>
-
-  <!--CURRENCY-->
-  <div class="card" id="currency-list2">
-    <div class="card-body">
-      <p class="card-title" id="currency-name">AED to IDR</p>
-      <h1 class="card-text" id="currency-value">12000</h1>
-    </div>
-  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
