--- a/client/index.html
+++ b/client/index.html
@@ -59,11 +59,10 @@
       </div>
     </div>
 
-  <!--CURRENCY-->
-  <div class="card" id="currency-list2">
+  <!-- WEATHER -->
+  <div class="card" id="weather-div">
     <div class="card-body">
-      <p class="card-title" id="currency-name">AED to IDR</p>
-      <h1 class="card-text" id="currency-value">12000</h1>
+      <p></p>
     </div>
   </div>
 
